--- a/html_css/third.html
+++ b/html_css/third.html
@@ -7,6 +7,8 @@
     <title>Programming Hero</title>
 </head>
 <body>
-    <h1>Programming Hero</h1>
-gi</body>
+    <h2>Third item of webdevelopment</h2>
+    <p>This is a Programming hero paragraph.</p>
+    
+</body>
 </html>
